objects/Observation_Form__c.object
<CustomObject>
    <description>Observation Forms utilized for quality and performance.</description>
    <fields>
        <fullName>All_Questions__c</fullName>
        <label>All Questions Posed by Customer Answered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apologize_to_Customer__c</fullName>
        <label>Apologize to Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apology__c</fullName>
        <label>Apology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_for_Purchase_Order_Number__c</fullName>
        <inlineHelpText>All Divisions.</inlineHelpText>
        <label>Ask for Purchase Order Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Fail__c</fullName>
        <formula>IF( Customer_InappropriateHandling__c = TRUE ||  Disclosing_Customer_Data__c  = TRUE ||  Use_Of_Inappropriate_Language__c = TRUE ||  Obtain_Credit_Card_Info__c = TRUE  ||  Web_ID_Not_Obtained__c = TRUE  ||  Billing_Address_Not_Verified__c = TRUE, "Failed", "Passed")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Fail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoid_Filler_Words__c</fullName>
        <label>Avoid Filler Words</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoid_Long_Silences__c</fullName>
        <label>Avoid Long Silences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Not_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if answer is "Yes."</inlineHelpText>
        <label>Billing Address Not Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>CASE(Case__r.Brand__c,
"1", "Tommy Hilfiger",
"2", "Calvin Klein",
"4", "IZOD",
"5", "Van Heusen",
"7", "Speedo Usa",
"8", "Heritage Ecom",
"9", "Partner Brands",
"81", "IZOD.com",
"83", "Warner",
"84", "Style Bureau",
"11", "True&amp;Co",
"10", "Olga", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Handling_Skills_Total__c</fullName>
        <formula>(IF( ISPICKVAL(  Use_of_Customer_Name__c , "Pass") || ISPICKVAL(  Use_of_Customer_Name__c , "N/A") , 1, 0 ) + IF( ISPICKVAL(   Avoid_Long_Silences__c , "Pass") || ISPICKVAL(  Avoid_Long_Silences__c , "N/A") , 1, 0) + IF( ISPICKVAL(  Avoid_Filler_Words__c , "Pass") || ISPICKVAL( Avoid_Filler_Words__c , "N/A") , 1, 0) +  IF( ISPICKVAL(  Hold_Procedure__c , "Pass")  ||  ISPICKVAL(  Hold_Procedure__c , "N/A"), 1, 0) +  IF( ISPICKVAL(  Talking_Over_Customer__c , "Pass")  ||  ISPICKVAL(  Talking_Over_Customer__c , "N/A")  , 1, 0)) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Handling Skills Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case_Channel__c</fullName>
        <formula>CASE(Case__r.Channel__c, 
"ECommerce", "ecommerce", 
"Online - CalvinKlein.com", "Online - CalvinKlein.com",
"Calvin Klein Store", "Calvin Klein Store",
"Van Heusen Store", "Van Heusen Store",
"Online - IZOD.com", "Online - IZOD.com",
"Online - styleBureau.com", "Online - styleBureau.com",
"Online -True&amp;co.com", "Online -True&amp;co.com",
"Online-CalvinKlein Canada", "Online-CalvinKlein Canada",
"Tommy Hilfiger Store", "Tommy Hilfiger Store",
"Online - speedo.com", "Online speedo.com",
"Speedo.com", "Speedo.com",
"Online - Tommy.com", "Online - Tommy.com",
"Online - vanheusen.com,", "Online vanheusen.com",
"Online-Warner's", "Online-Warner's", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Intake_Channel__c</fullName>
        <formula>Case (Case__r.Channel__c, 
"CalvinKlein.us", "Ecommerce",
"Calvin Klein Retail", "Retail",
"Tommy.com", "Retail",
"SpeedoUSA.com", "Ecommerce",
"Other Retailer", "Wholesale",
"VanHeusen.com", "Ecommerce",
"Van Heusen Retail","Retail",
"Izod.com", "Ecommerce", 
"styleBureau.com", "Retail", 
"trueandco.com", "Ecommerce",
"CalvinKlein.ca", "Ecommerce",
"Speedo.com", "Retail",
"Warner.com", "Ecommerce", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Intake Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <formula>CASE (Case__r.Origin,
"Email", "Email",
"Web", "Web",
"Phone", "Phone",
"Chat", "Chat",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Case associated to Observation Form.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Observation Forms</relationshipLabel>
        <relationshipName>Observation_Forms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing_Statement__c</fullName>
        <inlineHelpText>Closing Statement/Personalization of Brand Name</inlineHelpText>
        <label>Closing Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Total_Chat__c</fullName>
        <formula>(IF( ISPICKVAL(  Offer_Additional_Assistance__c, "Pass") || ISPICKVAL( Offer_Additional_Assistance__c, "N/A") , 1, 0 ) + IF( ISPICKVAL( Transition_Statement__c  , "Pass") || ISPICKVAL(  Transition_Statement__c , "N/A") , 1, 0) + IF( ISPICKVAL(   Proper_Signature__c , "Pass") || ISPICKVAL(  Proper_Signature__c , "N/A"), 1, 0)) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Total % (Chat)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closing_Total_Email__c</fullName>
        <formula>(IF( ISPICKVAL(  Offer_Additional_Assistance__c, "Pass") || ISPICKVAL(  Offer_Additional_Assistance__c, "N/A") , 1, 0 ) + IF( ISPICKVAL(  Transition_Statement__c, "Pass") || ISPICKVAL(     Transition_Statement__c   , "N/A") , 1, 0) + IF( ISPICKVAL(  Proper_Signature__c, "Pass") || ISPICKVAL(  Proper_Signature__c   , "N/A") , 1, 0)) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Total % (Email)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closing_Total_Phone__c</fullName>
        <formula>(IF( ISPICKVAL(  Offer_Additional_Assistance__c, "Pass") || ISPICKVAL( Offer_Additional_Assistance__c, "N/A") , 1, 0 ) + IF( ISPICKVAL(   Closing_Statement__c , "Pass") || ISPICKVAL(  Closing_Statement__c, "N/A") , 1, 0) + IF( ISPICKVAL(  Proper_Disconnect__c , "Pass") || ISPICKVAL( Proper_Disconnect__c, "N/A"), 1, 0)) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Total % (Phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Correct_Information__c</fullName>
        <label>Correct Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_InappropriateHandling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if answer is "Yes."</inlineHelpText>
        <label>Customer Inappropriate Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry__c</fullName>
        <label>Customer Inquiry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customization__c</fullName>
        <label>Customization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date CSR dealt with the customer.</description>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date CSR dealt with the customer.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Explanation__c</fullName>
        <inlineHelpText>Detailed Explanation of Next Steps And/Or Policies.</inlineHelpText>
        <label>Detailed Explanation of Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosing_Customer_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disclosing Customer Data (Not The Customer). Check if answer is "Yes."</description>
        <label>Disclosing Customer Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etiquette_Total__c</fullName>
        <formula>(IF( ISPICKVAL(   Tone_and_Warmth__c  , "Pass") || ISPICKVAL(  Tone_and_Warmth__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(   Empathy__c  , "Pass") || ISPICKVAL(   Empathy__c  , "N/A") , 1, 0) + IF( ISPICKVAL(   Apology__c  , "Pass") || ISPICKVAL(  Apology__c  , "N/A") , 1, 0) +  IF( ISPICKVAL(  Use_of_Positive_Words__c  , "Pass")  ||  ISPICKVAL(  Use_of_Positive_Words__c  , "N/A")  , 1, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etiquette Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Greeting_Total__c</fullName>
        <formula>(IF( ISPICKVAL( State_Brand_Name__c, "Pass") || ISPICKVAL(  State_Brand_Name__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(  State_Your_Name__c   , "Pass") || ISPICKVAL(  State_Your_Name__c  , "N/A") , 1, 0) + IF( ISPICKVAL(  Obtain_Customer_Name__c  , "Pass") || ISPICKVAL(   Obtain_Customer_Name__c   , "N/A") , 1, 0) +  IF( ISPICKVAL(   Offer_Ask__c   , "Pass")  ||  ISPICKVAL(   Offer_Ask__c  , "N/A")  , 1, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greeting Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Handling_Skills_Total_Chat__c</fullName>
        <formula>(IF( ISPICKVAL(  Personalization__c , "Pass") || ISPICKVAL(  Personalization__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Customization__c  , "Pass") || ISPICKVAL(  Customization__c , "N/A") , 1, 0) + IF( ISPICKVAL(   All_Questions__c  , "Pass") || ISPICKVAL(  All_Questions__c  , "N/A") , 1, 0) +  IF( ISPICKVAL(    Detailed_Explanation__c  , "Pass")  ||  ISPICKVAL( Detailed_Explanation__c  , "N/A")  , 1, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling Skills Total % (Chat)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Handling_Skills_Total__c</fullName>
        <formula>(IF( ISPICKVAL(     Personalization__c    , "Pass") || ISPICKVAL(   Personalization__c   , "N/A") , 1, 0 ) + IF( ISPICKVAL(    Customization__c   , "Pass") || ISPICKVAL(    Customization__c  , "N/A") , 1, 0) + IF( ISPICKVAL(    All_Questions__c  , "Pass") || ISPICKVAL(   All_Questions__c  , "N/A") , 1, 0) +  IF( ISPICKVAL(   Detailed_Explanation__c   , "Pass")  ||  ISPICKVAL(   Detailed_Explanation__c   , "N/A")  , 1, 0) +  IF( ISPICKVAL(   Offer_to_Follow_Up__c   , "Pass")  ||  ISPICKVAL(   Offer_to_Follow_Up__c   , "N/A")  , 1, 0) +  IF( ISPICKVAL(   Product_Positive_Comments__c   , "Pass")  ||  ISPICKVAL(   Product_Positive_Comments__c  , "N/A")  , 1, 0) ) / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling Skills Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hold_Procedure__c</fullName>
        <label>Hold Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obtain_Credit_Card_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Obtain Credit Card Information via Chat or E-mail. Check if answer is "Yes."</inlineHelpText>
        <label>Obtain Credit Card Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obtain_Customer_Name__c</fullName>
        <label>Obtain Customer Name and Repeat Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Additional_Assistance__c</fullName>
        <label>Offer Additional Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Ask__c</fullName>
        <label>Offer/Ask to Assist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_to_Follow_Up__c</fullName>
        <inlineHelpText>If applicable.</inlineHelpText>
        <label>Offer to Follow Up w/ Customer by Phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_to_Place_Order__c</fullName>
        <label>Offer to Place Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opening_Total_Chat__c</fullName>
        <formula>(IF( ISPICKVAL(  Proper_Greeting_with__c , "Pass") || ISPICKVAL(  Proper_Greeting_with__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Proper_Spelling_of_Customer_Name__c   , "Pass") || ISPICKVAL(  Proper_Spelling_of_Customer_Name__c   , "N/A") , 1, 0) + IF( ISPICKVAL(  Thanking_Customer__c   , "Pass") || ISPICKVAL(    Thanking_Customer__c   , "N/A") , 1, 0) +  IF( ISPICKVAL( Apologize_to_Customer__c  , "Pass")  ||  ISPICKVAL(  Apologize_to_Customer__c , "N/A")  , 1, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Total % (Chat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opening_Total_Email__c</fullName>
        <formula>(IF( ISPICKVAL( Proper_Greeting__c , "Pass")  ||  ISPICKVAL(Proper_Greeting__c, "N/A")  , 1, 0 ) +  IF( ISPICKVAL( Proper_Spelling_of_Cuustomer_Name_Email__c , "Pass")  ||  ISPICKVAL( Proper_Spelling_of_Cuustomer_Name_Email__c , "N/A")  , 1, 0) +  IF( ISPICKVAL( Thanking_Customer__c , "Pass")  ||  ISPICKVAL(Thanking_Customer__c, "N/A")  , 1, 0))  /  3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Total % (Email)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Management_Total__c</fullName>
        <formula>(IF( ISPICKVAL(  Offer_to_Place_Order__c , "Pass") || ISPICKVAL(  Offer_to_Place_Order__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Ask_for_Purchase_Order_Number__c , "Pass") || ISPICKVAL( Ask_for_Purchase_Order_Number__c , "N/A") , 1, 0)) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Management Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ownership_Call__c</fullName>
        <inlineHelpText>I vs. We</inlineHelpText>
        <label>Ownership Throughout Phone Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Email__c</fullName>
        <label>Ownership Throughout Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <inlineHelpText>I vs. We</inlineHelpText>
        <label>Ownership Throughout Chat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personalization__c</fullName>
        <label>Personalization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Etiquette_Total__c</fullName>
        <formula>(IF( ISPICKVAL(  Tone_and_Warmth__c , "Pass") || ISPICKVAL(   Tone_and_Warmth__c   , "N/A") , 1, 0 ) + IF( ISPICKVAL(   Empathy__c , "Pass") || ISPICKVAL(  Empathy__c , "N/A") , 1, 0) + IF( ISPICKVAL(  Apology__c , "Pass") || ISPICKVAL( Apology__c , "N/A") , 1, 0) +  IF( ISPICKVAL(  Verbal_Nods__c , "Pass")  ||  ISPICKVAL(  Verbal_Nods__c , "N/A"), 1, 0) +  IF( ISPICKVAL(  Use_of_Positive_Words__c , "Pass")  ||  ISPICKVAL(  Use_of_Positive_Words__c , "N/A")  , 1, 0)) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Etiquette Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Procedures_Total_Chat__c</fullName>
        <formula>(IF( ISPICKVAL(  Correct_Information__c , "Pass") || ISPICKVAL(  Correct_Information__c , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Proper_Resolution__c , "Pass") || ISPICKVAL(  Proper_Resolution__c , "N/A") , 1, 0) + IF( ISPICKVAL(   Proper_Understanding_of_Issue__c , "Pass") || ISPICKVAL(  Proper_Understanding_of_Issue__c , "N/A") , 1, 0) +  IF( ISPICKVAL(  Provided_Options__c  , "Pass")  ||  ISPICKVAL(  Provided_Options__c  , "N/A"), 1, 0) +  IF( ISPICKVAL(   Proper_Ticket_Coding__c , "Pass")  ||  ISPICKVAL(   Proper_Ticket_Coding__c , "N/A")  , 1, 0)) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedures Total % (Chat)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Procedures_Total_Email__c</fullName>
        <formula>(IF( ISPICKVAL( Correct_Information__c, "Pass") || ISPICKVAL(  Correct_Information__c  , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Proper_Resolution__c, "Pass") || ISPICKVAL(     Proper_Resolution__c   , "N/A") , 1, 0) + IF( ISPICKVAL( Proper_Understanding_of_Issue__c, "Pass") || ISPICKVAL(Proper_Understanding_of_Issue__c, "N/A") , 1, 0) +  IF( ISPICKVAL( Provided_Options__c, "Pass")  ||  ISPICKVAL( Provided_Options__c, "N/A"), 1, 0) +  IF( ISPICKVAL( Proper_Ticket_Coding__c, "Pass")  ||  ISPICKVAL(    Proper_Ticket_Coding__c, "N/A")  , 1, 0)) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedures Total % (Email)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Procedures_Total_Phone__c</fullName>
        <formula>(IF( ISPICKVAL(  Proper_Resolution_and_Provided_Options__c , "Pass") || ISPICKVAL(   Proper_Resolution_and_Provided_Options__c   , "N/A") , 1, 0 ) + IF( ISPICKVAL(   Detailed_Explanation__c , "Pass") || ISPICKVAL(  Detailed_Explanation__c   , "N/A") , 1, 0) + IF( ISPICKVAL(  Proper_Ticket_Coding__c , "Pass") || ISPICKVAL( Proper_Ticket_Coding__c , "N/A") , 1, 0) +  IF( ISPICKVAL(  Proper_Ticket_Note_Taking__c , "Pass")  ||  ISPICKVAL(  Proper_Ticket_Note_Taking__c , "N/A"), 1, 0) +  IF( ISPICKVAL(  Proper_PVH__c , "Pass")  ||  ISPICKVAL(     Proper_PVH__c , "N/A")  , 1, 0)) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedures Total % (Phone)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Positive_Comments__c</fullName>
        <label>Product Positive Comments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Disconnect__c</fullName>
        <label>Proper Disconnect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Formatting__c</fullName>
        <label>Proper Formatting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Grammar__c</fullName>
        <label>Proper Grammar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Greeting__c</fullName>
        <label>Proper Greeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Greeting_with__c</fullName>
        <label>Proper Greeting with Proper Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_PVH__c</fullName>
        <inlineHelpText>Ecommerce calls.</inlineHelpText>
        <label>Proper PVH Tool Comments or Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Resolution__c</fullName>
        <label>Proper Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Resolution_and_Provided_Options__c</fullName>
        <inlineHelpText>If applicable.</inlineHelpText>
        <label>Proper Resolution and Provided Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>